# polymesh_rw

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  readme.md
examples/: test_parser.rs  test_writer.rs
examples/test_meshes/two_zones_with_interfaces/constant/polyMesh/: owner
examples/test_meshes/two_zones_with_interfaces/system/: controlDict
examples/two_zones_with_interfaces/: channel.geo  main.rs
examples/two_zones_with_interfaces/constant/polyMesh/: cellZones  faces
examples/two_zones_with_interfaces/constant/polyMesh/sets/: interface
examples/writer_test_files/copy/constant/polyMesh/: boundary  cellZones  faceZones  faces  neighbour  owner  pointZones  points
examples/writer_test_files/copy/constant/polyMesh/sets/: channel  interface  metal
examples/writer_test_files/original/constant/polyMesh/sets/: channel
src/: base.rs  faces.rs  file_parser.rs  foam_file.rs  foam_structure.rs  lib.rs  parser_base.rs  points.rs  writer_base.rs
src/base/: file_content.rs  file_parser.rs  foam_field.rs  foam_structure.rs  foam_value.rs  foamfile.rs  mod.rs  parser_base.rs  writer_base.rs
src/polymesh/: boundary.rs  cellzones.rs  faces.rs  facezones.rs  mod.rs  neighbour.rs  owner.rs  points.rs  pointzones.rs  result.rs  sets.rs  timedir.rs  uniform.rs  zones.rs
tests/: integration_tests.rs
tests/test_cases/copy/cylinder/0/: U  U.orig  p.orig  phi
tests/test_meshes/copy/cylinder/0/: U  U.orig  p.orig  phi
tests/test_meshes/original/cylinder/0/: U  phi
tests/test_meshes/original/two_zones_with_interfaces/system/: channel.msh
(+38 files in other folders)
